fix footer alignment

--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -50,21 +50,20 @@ footer {
     }
   }
   .footer-links {
-    width: 35%;
+    width: 40%;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
     line-height: 2;
-    div {
+    & div {
+      width: 100%;
+      text-align: center;
       display: flex;
+      justify-content: center;
       flex-direction: column;
-      button {
-        outline: none;
-        border: none;
-        color: white;
-        background-color: transparent;
+      & a {
         font-size: 1.5rem;
-        margin-bottom: 2rem;
+        margin-bottom: 1rem;
         &:hover {
           color: $accent;
         }
